--- a/colour-story/main21.html
+++ b/colour-story/main21.html
@@ -21,7 +21,7 @@
 
     <div class="container">
         <img class="image-container" src="images/main-21.png" alt="Image">
-        <h1>I feel belonging to</h1>
+        <h1>I feel like I belong</h1>
         <a href="main22.html"><button class="button">Next</button></a>
     </div>
 
