--- a/colour-story/main22.html
+++ b/colour-story/main22.html
@@ -21,7 +21,7 @@
 
     <div class="container">
         <img class="image-container" src="images/main-22.png" alt="Image">
-        <h1>Label can be...</h1>
+        <h1>Labels can be...</h1>
         <a href="main23.html"><button class="button">Next</button></a>
     </div>
 
