--- a/colour-story/main23.html
+++ b/colour-story/main23.html
@@ -21,7 +21,7 @@
 
     <div class="container">
         <img class="image-container" src="images/main-23.png" alt="Image">
-        <h1>powerful in some way</h1>
+        <h1>powerful sometimes</h1>
         <a href="main24.html"><button class="button">Next</button></a>
     </div>
 
