--- a/colour-story/main25.html
+++ b/colour-story/main25.html
@@ -21,7 +21,7 @@
 
     <div class="container">
         <img class="image-container" src="images/main-25.png" alt="Image">
-        <h1>It's absolutely OK.</h1>
+        <h1>That's okay too.</h1>
         <a href="main26.html"><button class="button">Next</button></a>
     </div>
 
