--- a/colour-story/main12.html
+++ b/colour-story/main12.html
@@ -21,7 +21,7 @@
 
     <div class="container">
         <img class="image-container" src="images/main-12.png" alt="Image">
-        <h1>"Bi sounds like a player!"</h1>
+        <h1>"Bi sounds greedy!"</h1>
         <a href="main13.html"><button class="button">Next</button></a>
     </div>
 
