--- a/colour-story/main24.html
+++ b/colour-story/main24.html
@@ -21,7 +21,7 @@
 
     <div class="container">
         <img class="image-container" src="images/main-24.png" alt="Image">
-        <h1>Don't wanna be put in box?</h1>
+        <h1>Don't wanna be put into a category?</h1>
         <a href="main25.html"><button class="button">Next</button></a>
     </div>
 
