--- a/colour-story/main18.html
+++ b/colour-story/main18.html
@@ -21,7 +21,7 @@
 
     <div class="container">
         <img class="image-container" src="images/main-18.png" alt="Image">
-        <h1>I just don't label myself</h1>
+        <h1>I just don't label myself as</h1>
         <a href="main19.html"><button class="button">Next</button></a>
     </div>
 
